--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.0
   json_annotation: ^4.8.1
   get_time_ago: ^1.2.5
+  onesignal_flutter: ^5.0.2
 
 dev_dependencies:
   flutter_test:
