--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "live_sync_flutter_app" "\0"
+            VALUE "FileDescription", "youtube_clone_flutter_app" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "live_sync_flutter_app" "\0"
+            VALUE "InternalName", "youtube_clone_flutter_app" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "live_sync_flutter_app.exe" "\0"
-            VALUE "ProductName", "live_sync_flutter_app" "\0"
+            VALUE "OriginalFilename", "youtube_clone_flutter_app.exe" "\0"
+            VALUE "ProductName", "youtube_clone_flutter_app" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
