updating shimmer skeleton for loading

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   json_annotation: ^4.8.1
   get_time_ago: ^1.2.5
   onesignal_flutter: ^5.0.2
+  timeago: ^3.5.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
