--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: live_sync_flutter_app
+name: youtube_clone_flutter_app
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -39,6 +39,8 @@ dependencies:
   json_annotation: ^4.8.1
   get_time_ago: ^1.2.5
   onesignal_flutter: ^5.0.2
+  timeago: ^3.5.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
